kubernetes/cdn-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: cdn-server
  name: cdn-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cdn-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/back-net: "true"
        io.kompose.network/front-net: "true"
        io.kompose.service: cdn-server
    spec:
      containers:
        - image: a11ywatch/cdn-server
          name: cdn-server
          ports:
            - containerPort: 50054
          resources: {}
      restartPolicy: Always
status: {}
