kubernetes/crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: crawler
  name: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: crawler
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/back-net: "true"
        io.kompose.service: crawler
    spec:
      containers:
        - image: a11ywatch/crawler
          name: crawler
          ports:
            - containerPort: 50055
          resources: {}
      restartPolicy: Always
status: {}
