kubernetes/mav-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mav
  name: mav
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mav
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/back-net: "true"
        io.kompose.service: mav
    spec:
      containers:
        - env:
            - name: COMPUTER_VISION_ENDPOINT
            - name: COMPUTER_VISION_SUBSCRIPTION_KEY
          image: a11ywatch/mav
          name: mav
          ports:
            - containerPort: 50053
          resources: {}
      restartPolicy: Always
status: {}
