kubernetes/pagemind-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: pagemind
  name: pagemind
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pagemind
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/back-net: "true"
        io.kompose.service: pagemind
    spec:
      containers:
        - env:
            - name: PAGESPEED_API_KEY
            - name: PORT
              value: "8040"
            - name: SCRIPTS_CDN_URL
              value: http://127.0.0.1:8090/api
            - name: SCRIPTS_CDN_URL_HOST
              value: http://localhost:8090/cdn
          image: a11ywatch/pagemind
          name: pagemind
          ports:
            - containerPort: 50052
          resources: {}
      restartPolicy: Always
status: {}
