kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "3280"
      port: 3280
      targetPort: 8080
    - name: "50051"
      port: 50051
      targetPort: 50051
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
