kubernetes/cdn-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: cdn-server
  name: cdn-server
spec:
  ports:
    - name: "50054"
      port: 50054
      targetPort: 50054
  selector:
    io.kompose.service: cdn-server
status:
  loadBalancer: {}
