kubernetes/chrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: chrome
  name: chrome
spec:
  ports:
    - name: "9222"
      port: 9222
      targetPort: 9222
  selector:
    io.kompose.service: chrome
status:
  loadBalancer: {}
