kubernetes/mav-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mav
  name: mav
spec:
  ports:
    - name: "50053"
      port: 50053
      targetPort: 50053
  selector:
    io.kompose.service: mav
status:
  loadBalancer: {}
