kubernetes/pagemind-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: pagemind
  name: pagemind
spec:
  ports:
    - name: "50052"
      port: 50052
      targetPort: 50052
  selector:
    io.kompose.service: pagemind
status:
  loadBalancer: {}
